updated the content

--- a/djangoresume/resumesite/templates/home.html
+++ b/djangoresume/resumesite/templates/home.html
@@ -95,7 +95,7 @@
 					<li>Software Artitecture</li>
 					<li>Django/Flask</li>
 					<li>OpenCV</li>
-					<li>HTML</li>
+					<li>javascript</li>
 					<li>DevOps</li>
 					<li>Customer Support</li>
 					<li>Product Testing</li>
